@@ -21,7 +21,7 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * $Id: auth.c,v 1.14 2009-06-03 18:42:31 castaglia Exp $
+ * $Id: auth.c,v 1.15 2009-07-04 00:34:08 castaglia Exp $
  */
 
 #include "mod_sftp.h"
@@ -866,6 +866,7 @@ static int handle_userauth_req(struct ssh2_packet *pkt, char **service) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "USERAUTH_REQUEST"));
   cmd->arg = pstrcat(pkt->pool, user, " ", method, NULL);
+  cmd->class = CL_AUTH;
 
   if (auth_attempts > auth_attempts_max) {
     pr_log_auth(PR_LOG_NOTICE,
