@@ -21,7 +21,7 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * $Id: channel.c,v 1.10 2009-05-13 23:18:08 castaglia Exp $
+ * $Id: channel.c,v 1.11 2009-07-04 00:34:08 castaglia Exp $
  */
 
 #include "mod_sftp.h"
@@ -397,6 +397,7 @@ static int read_channel_open(struct ssh2_packet *pkt, uint32_t *channel_id) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "CHANNEL_OPEN"));
   cmd->arg = channel_type;
+  cmd->class = CL_MISC;
 
   if (strcmp(channel_type, "session") != 0) {
     (void) pr_log_writefile(sftp_logfd, MOD_SFTP_VERSION,
@@ -434,6 +435,7 @@ static int handle_channel_close(struct ssh2_packet *pkt) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "CHANNEL_CLOSE"));
   cmd->arg = pstrdup(pkt->pool, chan_str);
+  cmd->class = CL_MISC;
 
   chan = get_channel(channel_id);
   if (chan == NULL) {
@@ -640,6 +642,7 @@ static int handle_channel_eof(struct ssh2_packet *pkt) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "CHANNEL_EOF"));
   cmd->arg = pstrdup(pkt->pool, chan_str);
+  cmd->class = CL_MISC;
 
   chan = get_channel(channel_id);
   if (chan == NULL) {
@@ -883,6 +886,7 @@ static int handle_channel_req(struct ssh2_packet *pkt) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "CHANNEL_REQUEST"));
   cmd->arg = channel_request;
+  cmd->class = CL_MISC;
 
   chan = get_channel(channel_id);
   if (chan == NULL) {
@@ -1007,6 +1011,7 @@ static int handle_channel_window_adjust(struct ssh2_packet *pkt) {
 
   cmd = pr_cmd_alloc(pkt->pool, 1, pstrdup(pkt->pool, "CHANNEL_WINDOW_ADJUST"));
   cmd->arg = pstrdup(pkt->pool, adjust_str);
+  cmd->class = CL_MISC;
 
   chan = get_channel(channel_id);
   if (chan == NULL) {
