@@ -21,7 +21,7 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * $Id: fxp.c,v 1.33 2009-06-22 17:54:23 castaglia Exp $
+ * $Id: fxp.c,v 1.34 2009-07-04 00:34:08 castaglia Exp $
  */
 
 #include "mod_sftp.h"
@@ -2515,6 +2515,7 @@ static int fxp_handle_close(struct fxp_packet *fxp) {
   name = sftp_msg_read_string(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "CLOSE", name);
+  cmd->class = CL_READ|CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "CLOSE", NULL, NULL);
@@ -2690,6 +2691,7 @@ static int fxp_handle_extended(struct fxp_packet *fxp) {
     &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "EXTENDED", ext_request_name);
+  cmd->class = CL_MISC;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "EXTENDED", NULL, NULL);
@@ -2735,6 +2737,7 @@ static int fxp_handle_fsetstat(struct fxp_packet *fxp) {
   name = sftp_msg_read_string(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "FSETSTAT", name);
+  cmd->class = CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "FSETSTAT", NULL, NULL);
@@ -2856,6 +2859,7 @@ static int fxp_handle_fstat(struct fxp_packet *fxp) {
   name = sftp_msg_read_string(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "FSTAT", name);
+  cmd->class = CL_READ;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "FSTAT", NULL, NULL);
@@ -3000,6 +3004,7 @@ static int fxp_handle_init(struct fxp_packet *fxp) {
     (unsigned long) fxp_session->client_version);
 
   cmd = fxp_cmd_alloc(fxp->pool, "INIT", version_str);
+  cmd->class = CL_MISC;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "INIT", NULL, NULL);
@@ -3099,6 +3104,7 @@ static int fxp_handle_link(struct fxp_packet *fxp) {
   args = pstrcat(fxp->pool, src_path, " ", dst_path, NULL);
 
   cmd = fxp_cmd_alloc(fxp->pool, "LINK", args);
+  cmd->class = CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "LINK", NULL, NULL);
@@ -3229,6 +3235,7 @@ static int fxp_handle_lock(struct fxp_packet *fxp) {
   lock_flags = sftp_msg_read_int(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "LOCK", name);
+  cmd->class = CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "LOCK", NULL, NULL);
@@ -3491,6 +3498,7 @@ static int fxp_handle_lstat(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "LSTAT", path);
+  cmd->class = CL_READ;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -3625,6 +3633,7 @@ static int fxp_handle_mkdir(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "MKDIR", path);
+  cmd->class = CL_WRITE;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -3818,6 +3827,11 @@ static int fxp_handle_open(struct fxp_packet *fxp) {
 
   cmd = fxp_cmd_alloc(fxp->pool, "OPEN", path);
 
+  /* Set the command class to MISC for now; we'll change it later to
+   * READ or WRITE once we know which it is.
+   */
+  cmd->class = CL_MISC;
+
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "OPEN", NULL, NULL);
   pr_scoreboard_entry_update(session.pid,
@@ -3984,13 +3998,22 @@ static int fxp_handle_open(struct fxp_packet *fxp) {
     fxp_stroflags(fxp->pool, open_flags));
 
   if (open_flags & O_APPEND) {
+    cmd->class = CL_WRITE;
     cmd2 = fxp_cmd_alloc(fxp->pool, C_APPE, path);
 
   } else if ((open_flags & O_WRONLY) ||
              (open_flags & O_RDWR)) {
     cmd2 = fxp_cmd_alloc(fxp->pool, C_STOR, path);
 
+    if (open_flags & O_WRONLY) {
+      cmd->class = CL_WRITE;
+
+    } else if (open_flags & O_RDWR) {
+      cmd->class = CL_READ|CL_WRITE;
+    }
+
   } else if (open_flags == O_RDONLY) {
+    cmd->class = CL_READ;
     cmd2 = fxp_cmd_alloc(fxp->pool, C_RETR, path);
   }
 
@@ -4204,6 +4227,7 @@ static int fxp_handle_opendir(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "OPENDIR", path);
+  cmd->class = CL_DIRS;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -4360,6 +4384,7 @@ static int fxp_handle_read(struct fxp_packet *fxp) {
 #endif
 
   cmd = fxp_cmd_alloc(fxp->pool, "READ", name);
+  cmd->class = CL_READ;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "READ", NULL, NULL);
@@ -4651,6 +4676,7 @@ static int fxp_handle_readdir(struct fxp_packet *fxp) {
   name = sftp_msg_read_string(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "READDIR", name);
+  cmd->class = CL_DIRS;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "READDIR", NULL, NULL);
@@ -4866,6 +4892,7 @@ static int fxp_handle_readlink(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "READLINK", path);
+  cmd->class = CL_READ;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -4972,6 +4999,7 @@ static int fxp_handle_realpath(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "REALPATH", path);
+  cmd->class = CL_INFO;
 
   if (fxp_session->client_version >= 6 &&
       fxp->payload_sz >= sizeof(char)) {
@@ -5103,6 +5131,7 @@ static int fxp_handle_remove(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "REMOVE", path);
+  cmd->class = CL_WRITE;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -5337,6 +5366,7 @@ static int fxp_handle_rename(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "RENAME", args);
+  cmd->class = CL_MISC;
  
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -5585,6 +5615,7 @@ static int fxp_handle_rmdir(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "RMDIR", path);
+  cmd->class = CL_WRITE;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -5770,6 +5801,7 @@ static int fxp_handle_setstat(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "SETSTAT", path);
+  cmd->class = CL_WRITE;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -5894,6 +5926,7 @@ static int fxp_handle_stat(struct fxp_packet *fxp) {
   }
 
   cmd = fxp_cmd_alloc(fxp->pool, "STAT", path);
+  cmd->class = CL_READ;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -6015,6 +6048,7 @@ static int fxp_handle_symlink(struct fxp_packet *fxp) {
   args = pstrcat(fxp->pool, src_path, " ", dst_path, NULL);
 
   cmd = fxp_cmd_alloc(fxp->pool, "SYMLINK", args);
+  cmd->class = CL_WRITE;
 
   pr_trace_msg(trace_channel, 7, "received request: SYMLINK %s %s", src_path,
     dst_path);
@@ -6056,6 +6090,7 @@ static int fxp_handle_symlink(struct fxp_packet *fxp) {
 
   args2 = pstrcat(fxp->pool, src_path, "\t", dst_path, NULL);
   cmd2 = fxp_cmd_alloc(fxp->pool, "SYMLINK", args2);
+  cmd2->class = CL_WRITE;
 
   buflen = bufsz = FXP_RESPONSE_DATA_DEFAULT_SZ;
   buf = ptr = palloc(fxp->pool, bufsz);
@@ -6187,6 +6222,7 @@ static int fxp_handle_write(struct fxp_packet *fxp) {
   session.total_bytes += datalen;
   
   cmd = fxp_cmd_alloc(fxp->pool, "WRITE", name);
+  cmd->class = CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "WRITE", NULL, NULL);
@@ -6461,6 +6497,7 @@ static int fxp_handle_unlock(struct fxp_packet *fxp) {
   lock_flags = sftp_msg_read_int(fxp->pool, &fxp->payload, &fxp->payload_sz);
 
   cmd = fxp_cmd_alloc(fxp->pool, "UNLOCK", name);
+  cmd->class = CL_WRITE;
 
   pr_scoreboard_entry_update(session.pid,
     PR_SCORE_CMD, "%s", "UNLOCK", NULL, NULL);
