@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1041 2009-07-03 23:02:09 castaglia Exp $
+$Id: NEWS,v 1.1042 2009-07-04 00:34:08 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -13,6 +13,7 @@ CVS
 --------------------------------
 - Bug 3263 - Supplying option SFTPRekey timeout parameter causes segmentation
   fault.
+- Bug 3265 - SFTP requests are logged to ExtendedLog without regard to classes.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
